--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo.png" alt="illustration of a watering can">
+            </div>
+            <div class="links">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Plants</a>
+                <a href="">Contact</a>
+            </div>
+        </nav>
+    </header>
+    <section id="top">
+        <div class="titles">
+            <h1>The Watering Can</h1>
+            <button>Shop Our Indoor Plant Sale</button>
+        </div>    
+    </section>
+    <section id="about">
+        <div>
+            <h2>Our Story</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Expedita officia nihil error sapiente 
+                sunt eligendi eius laudantium, reiciendis saepe 
+                enim provident ad culpa. Dolores, 
+                nemo doloremque nihil officiis incidunt amet?</p>
+        </div>
+    </section>
 </body>
 </html>
