--- a/index.html
+++ b/index.html
@@ -35,5 +35,52 @@
                 nemo doloremque nihil officiis incidunt amet?</p>
         </div>
     </section>
+    <section id="shop">
+        <h2>Our Plants</h2>
+        <div class="container">
+            <div class="bg-img succulants">
+
+            </div>
+        <div class="text">
+            <div>
+                <h3>Succulants</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint autem, nobis ipsum unde ea quod eum fugiat facere voluptatibus magni at. Natus quisquam animi et aspernatur beatae neque, iste quos?</p>
+                <button>Shop Now!</button>
+            </div>
+        <div class="bg-img cacti">
+
+        </div>
+        <div class="bg-img tropicals">
+
+        </div>
+        <div class="text">
+            <div>
+                <h3>Tropicals</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, qui! At reiciendis beatae ullam laudantium minus odit nobis ea. Magni molestias quisquam animi ex omnis, similique praesentium nostrum mollitia fugiat.</p>
+                <button>Shop Now!</button>
+            </div>
+        </div>    
+        </div>   
+        </div>
+    </section>
+    <footer id="contact">
+        <h2>Get in TOuch!</h2>
+        <div class="left">
+            <div>
+                <h3>Find Us Here:</h3>
+                <address>123 plant lane<br>Bloomfield, Ontario<br>Canada L2G OX7</address>
+                <a href="tel:1-613">+1-613-978-8282</a><br>
+                <a href="">info@thewateringcan.ca</a>
+                <p>@thewateringcan on the socials</p>
+            </div>
+        </div>
+        <div class="right">
+            <img src="images/shop.jpg" alt="Image of the front of the store">
+        </div>
+        <div class="bottom">
+            <p>copyright Brit Hemming 2021</p>
+        </div>
+    </footer>
+        
 </body>
 </html>
