formmated site without content

--- a/index.html
+++ b/index.html
@@ -4,83 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../User-Interface-II/style/index.css">
 </head>
 <body>
     <header>
+        <h1>MY NAME</h1>
         <nav>
-            <div class="logo">
-                <img src="images/logo.png" alt="illustration of a watering can">
-            </div>
-            <div class="links">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Plants</a>
-                <a href="">Contact</a>
-            </div>
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+            <a href="">Projects</a>
         </nav>
     </header>
-    <section id="top">
-        <div class="titles">
-            <h1>The Watering Can</h1>
-            <button>Shop Our Indoor Plant Sale</button>
-        </div>    
+<section class="top">
+    <div class="left">
+        <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+    </div>
+    <div class="right">
+        <h2>MY NAME</h2>
+        <button>My Projects</button>
+        <p>Here are some words about me <br>and my journey in coding so far. 
+            <br>These words are authentic and inspiring. <br>These words tell my story
+        </p>
+    </div>
+</section>
+<section class="a">
+    <div class="img">
+    <div>
+    <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+    <p>caption</p>
+    </div>
+    <div>
+    <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+    <p>caption</p>
+    </div>
+    <div>
+    <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+    <p>caption</p>
+    </div>
+    <div>
+    <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+    <p>caption</p>
+    </div>
+    </div>
     </section>
-    <section id="about">
+</section>
+<section class="b">
+    <div class="img">
         <div>
-            <h2>Our Story</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Expedita officia nihil error sapiente 
-                sunt eligendi eius laudantium, reiciendis saepe 
-                enim provident ad culpa. Dolores, 
-                nemo doloremque nihil officiis incidunt amet?</p>
+        <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+        <p>caption</p>
         </div>
-    </section>
-    <section id="shop">
-        <h2>Our Plants</h2>
-        <div class="container">
-            <div class="bg-img succulants">
-
-            </div>
-        <div class="text">
-            <div>
-                <h3>Succulants</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint autem, nobis ipsum unde ea quod eum fugiat facere voluptatibus magni at. Natus quisquam animi et aspernatur beatae neque, iste quos?</p>
-                <button>Shop Now!</button>
-            </div>
-        <div class="bg-img cacti">
-
+        <div>
+        <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+        <p>caption</p>
         </div>
-        <div class="bg-img tropicals">
-
+        <div>
+        <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+        <p>caption</p>
         </div>
-        <div class="text">
-            <div>
-                <h3>Tropicals</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, qui! At reiciendis beatae ullam laudantium minus odit nobis ea. Magni molestias quisquam animi ex omnis, similique praesentium nostrum mollitia fugiat.</p>
-                <button>Shop Now!</button>
-            </div>
-        </div>    
-        </div>   
+        <div>
+        <img src="https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80" alt="">
+        <p>caption</p>
         </div>
-    </section>
-    <footer id="contact">
-        <h2>Get in TOuch!</h2>
-        <div class="left">
-            <div>
-                <h3>Find Us Here:</h3>
-                <address>123 plant lane<br>Bloomfield, Ontario<br>Canada L2G OX7</address>
-                <a href="tel:1-613">+1-613-978-8282</a><br>
-                <a href="">info@thewateringcan.ca</a>
-                <p>@thewateringcan on the socials</p>
-            </div>
         </div>
-        <div class="right">
-            <img src="images/shop.jpg" alt="Image of the front of the store">
-        </div>
-        <div class="bottom">
-            <p>copyright Brit Hemming 2021</p>
-        </div>
-    </footer>
-        
+</section>
+<footer>
+    <h2>Like what you see?</h2>
+    <button>Contact me</button>
+</footer>    
 </body>
 </html>
