Portfolio made responsive 500 px and 800 px

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </p>
     </div>
 </section>
+<section class="projects">
 <section class="a">
     <div class="img">
     <div>
@@ -68,6 +69,7 @@
         <p>caption</p>
         </div>
         </div>
+</section>
 </section>
 <footer>
     <h2>Like what you see?</h2>
