--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="../User-Interface-II/style/index.css">
 </head>
-https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80
 <body>
+    <section class="container">
     <header>
         <h1>MY NAME</h1>
         <nav>
@@ -65,6 +65,6 @@ https://images.unsplash.com/photo-1517187654069-ba29110a1d9e?ixlib=rb-1.2.1&ixid
         <h2>Like what you see?</h2>
         <a class="contactlink" href="#">Contact Me</a>
     </footer>
-
+</section>    
 </body>
 </html>
